Fixed: Quicklinks do not work; Fixed: Too much gap between last details box and comments box; Fixed: Missing gap between features container and pagination control; Enhancement: The LegalPage needs to have a responsive width.

--- a/components/src/main/resources/com/dlsc/jfxcentral2/theme.css
+++ b/components/src/main/resources/com/dlsc/jfxcentral2/theme.css
@@ -2039,6 +2039,10 @@
     -fx-background-radius: 26px;
 }
 
+.pagination-control > .content-pane {
+    -fx-spacing: 40px;
+}
+
 .pagination-control .content-pane .placeholder-wrapper {
     -fx-padding: 0 0 50px 0;
 }
@@ -2293,6 +2297,16 @@
     -fx-font-size: 20px;
 }
 
+.quick-link-view.browser:sm:hover {
+    -fx-scale-x: 0.995;
+    -fx-scale-y: 0.995;
+}
+
+.quick-link-view.browser:md-lg:hover {
+    -fx-scale-x: 0.99;
+    -fx-scale-y: 0.99;
+}
+
 .quick-link-view:hover {
     -fx-effect: -blue-shadow;
 }
@@ -2364,7 +2378,7 @@
 
 .quick-link-view.senapt-link-view-1 .content-box,
 .quick-link-view.senapt-link-view-2 .content-box {
-    -fx-spacing:20px;
+    -fx-spacing: 20px;
     -fx-alignment: center;
 }
 
@@ -3204,14 +3218,14 @@
  * CustomMarkdownTabPane
  */
 .custom-markdown-tab-pane:lg {
-    -fx-min-width: 858px;
-    -fx-pref-width: 858px;
+    -fx-max-width: 858px;
     -fx-padding: 0 60px;
 }
 
 .custom-markdown-tab-pane:md {
     -fx-min-width: 586px;
     -fx-pref-width: 586px;
+    -fx-max-width: 858px;
     -fx-padding: 0 40px;
 }
 
@@ -6009,7 +6023,7 @@
     -fx-icon-code: "mdi-timer";
 }
 
-.videos-details-box:sm > .content-box  {
+.videos-details-box:sm > .content-box {
     -fx-min-width: 317px;
 }
 
@@ -6068,34 +6082,24 @@
 
 .details-content-pane > .content-box > .center-box,
 .details-content-pane > .content-box > * > .center-box {
-    -fx-spacing: 15px;
+    -fx-spacing: 0px;
     -fx-alignment: top-center;
+}
+
+.details-content-pane .box-spacer {
+    -space: 15px;
+    -fx-min-height: -space;
+    -fx-pref-height: -space;
+    -fx-max-height: -space;
+}
+
+.details-content-pane:sm-md .box-spacer {
+    -space: 10px;
 }
 
 .details-content-pane > .content-box > .center-box > .boxes-container,
 .details-content-pane > .content-box > * > .center-box > .boxes-container {
-    -fx-spacing: 10px;
     -fx-alignment: top-center;
-}
-
-.details-content-pane:md > .content-box > .center-box,
-.details-content-pane:md > .content-box > * > .center-box {
-    -fx-spacing: 10px;
-}
-
-.details-content-pane:md > .content-box > .center-box > .boxes-container,
-.details-content-pane:md > .content-box > * > .center-box > .boxes-container {
-    -fx-spacing: 10px;
-}
-
-.details-content-pane:sm > .content-box > .center-box,
-.details-content-pane:sm > .content-box > * > .center-box {
-    -fx-spacing: 15px;
-}
-
-.details-content-pane:sm > .content-box > .center-box > .boxes-container,
-.details-content-pane:sm > .content-box > * > .center-box > .boxes-container {
-    -fx-spacing: 15px;
 }
 
 /** ------------------------------------
@@ -8059,7 +8063,7 @@
 }
 
 .team-view .member-cell-view:sm .job-title-label {
-    -fx-padding:0;
+    -fx-padding: 0;
 }
 
 .team-view .member-cell-view .social-links-view {
@@ -8406,7 +8410,7 @@
     -fx-alignment: center;
 }
 
-.packs-icons-view .top-box .search-text-field{
+.packs-icons-view .top-box .search-text-field {
     -fx-background-radius: 26px;
     -fx-focus-color: -grey-10;
     -fx-faint-focus-color: transparent;
